--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   blinking_text: ^1.0.2
   provider: ^6.0.5
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
