--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,26 @@ dependencies:
   blinking_text: ^1.0.2
   provider: ^6.0.5
   url_launcher: ^6.2.1
+  share_plus: ^7.2.1
+  loading_animation_widget: ^1.2.0+4
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/News (2).png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  
+  windows:
+    generate: true
+    image_path: "assets/logo/News (2).png"
+     
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -64,9 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
